<resources>
    <string name="app_name">TaskList</string>
    <string name="Welcome_Text">Registrate o inicia sesión</string>
    <string name="User_Text">Usuario</string>
    <string name="Email_hint">Escribe tu Email</string>
    <string name="Password_Text">Contraseña</string>
    <string name="Password_hint">Escribe tu contraseña</string>
    <string name="SingUp_Text">Registrarse</string>
    <string name="LogIn_Text">Acceder</string>
    <string name="enterTask_hint">Escribe la descripción de la tarea</string>
    <string name="RegisterAcc_text">Registrar cuenta</string>


    <string name="invalid_mail">Ingrese mail válido</string>
    <string name="invalid_password">6 caracteres o más requeridos</string>
    <string name="LogOut_text">Cerrar sesión</string>
    <string name="EnterTask_hint">Enter task description</string>


</resources>